--- a/kubernetes/2.1_todo_deployment.yml
+++ b/kubernetes/2.1_todo_deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: todo-nextjs
-        image: rudipailer/todo-app:latest
+        image: martin2210781020/todo-app:latest
         ports:
         - containerPort: 3000
           name: todo
